style(demo/select): fix overflow when selecting large options (#890)
* style(demo/select): fix overflow when selecting large options

* style(demo/select): update field min width

--- a/packages/vue-form/src/assets/css/field.css
+++ b/packages/vue-form/src/assets/css/field.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--_gap);
+  min-width: 0;
   width: 100%;
 }
 
